# DepAnalyser

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
frontend/: index.html
src/: main.cpp
src/common/: types.h
src/common/tread_pool/: thread_pool.cpp  thread_pool.h
src/detectors/: critical_vertex.cpp  critical_vertex.h  cycle.h  detector.h  redundancy.cpp  redundancy.h
src/detectors/critical/: critical_vertex.cpp  critical_vertex.h
src/detectors/cycle/: cycle.cpp  cycle.h
src/detectors/redundancy/: redundancy.h
src/graph/: graph.cpp  graph.h
src/parser/: factory.cpp  factory.h  graph_builder.cpp  graph_builder.h  parser.h
src/parser/cpp/: cpp_parser.cpp  cpp_parser.h
src/parser/go/: go_parser.cpp  go_parser.h
src/parser/java/: java_parser.cpp  java_parser.h
src/parser/js/: js_parser.cpp  js_parser.h
src/parser/python/: python_parser.cpp  python_parser.h
src/server/: analysis_service.cpp  analysis_service.h
tests/: critical_vertex_test.cpp  cycle_detector_test.cpp  graph_test.cpp  helpers.h  parser_test.cpp  redundancy_test.cpp
tests/fixtures/cpp/: main.cpp
tests/fixtures/go/: main.go
tests/fixtures/java/: Main.java
tests/fixtures/js/: main.js
tests/fixtures/python/: main.py
